# ExDBN-DNN

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
reports/: codiet_tokenizer_corpus.txt  dummy_nanochat_ckpt.pt  dummy_nanochat_vocab.txt  tmp_codiet_first15_token_corpus.txt
reports/causalgpt_runs_codiet/_debug_lambda/codiet_302_0/: ExDBN_LLM.anc  ExDBN_LLM_idx.anc  (+7 more)
reports/tmp_sanity/: dummy_ckpt.pt  dummy_ckpt_2048.pt  vocab_all.txt  vocab_unused_2048.txt
src/CausalGPT/: Test_codiet.sh  constrained_nanochat.py  data.py  draw_pic_pydot.py  exdbn_ban_edges.py  model.py  perform_CausalGPT.sh  pyproject.toml  run_exdbn_to_nanochat.py
src/CausalGPT/backup/: anc_convert_token.py  constrained_nanochat.py  dnn_constraints_utils.py  llm_prior.py  llm_prior_cli.py  make_dummy_nanochat_assets.py  model1.py  plot.py  simulate_cammml_constraints.py  table_to_token_text.py  test.py
src/CausalGPT/backup/test_backup/: compare_exdbn_vs_constrained_anc.py  test_constrained_nanochat_with_exdbn_arcs.py  test_data.py  test_end2end_exdbn_anc_to_dnn.py  test_exdbn_ban_edges_constraints1.py  test_generate_to_anc_output.py  test_model.py  test_parse_exdbn_anc_into_constrained_nanochat.py
src/CausalGPT/configs/: exdbn_perform.yaml
src/CausalGPT/tests/: ExDBN_perform.py  Run_codiet_exdbn_to_nanochat.sh  Test_codiet.sh  Test_codiet_with_all_features.sh  Test_sanity_check_vocab.py  constr_sft.batch  constr_sft.sh  smoke_test.py  test.py  test_asia_ground_truth_alignment.py  test_exdbn_ban_edges_constraints.py  test_exdbn_ban_edges_constraints2.py  test_model1.py  test_predict_exdbn_adjacency_from_csv.py  tok_pre_mid_d20.batch  tok_pre_mid_d20.sh  vanilla_sft.batch  vanilla_sft.sh
src/CausalGPT/tests/patches/: constr-nanochat-chat_sft_constr-anc.patch
src/CausalGPT/utils/: anc_arcs.py  asia_ground_truth_utils.py  dnn_constraints_utils.py  generate_dummy_pt.py  make_vocab_gpt4style.py  shd_metrics_utils.py
(+63 files in other folders)
